--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1 style="text-align: center">O Rei Do Pop</h1>
+        <h1 style="text-align: center">O Rei Do POP</h1>
 
         <p id="avaliaçao"><em><p>Michael Joseph Jackson (Gary, 29 de agosto de 1958 – Los Angeles, 25 de junho de 2009) foi um cantor, compositor e dançarino estadunidense. Apelidado de "Rei do Pop", foi um dos ícones culturais mais importantes e influentes de todos os tempos e um dos maiores artistas da história da música. Suas contribuições para a música, a dança e a moda por mais de quatro décadas, juntamente com a divulgação de sua vida pessoal, fizeram dele uma figura global na cultura popular.</p>
 <p>O oitavo filho da família Jackson, Michael fez sua estreia profissional em 1964, com seus irmãos mais velhos, Jackie, Tito, Jermaine e Marlon, como membro do grupo musical The Jackson 5.</p>
